--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "sneaker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev-server": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/erickyvand/sneaker.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/erickyvand/sneaker/issues"
-  },
-  "homepage": "https://github.com/erickyvand/sneaker#readme",
-  "dependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.11.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
-    "regenerator-runtime": "^0.13.7",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.2.0"
-  }
+	"name": "sneaker",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev-server": "nodemon --exec babel-node src/index.js",
+		"migrate:up": "npx sequelize-cli db:migrate",
+		"migrate:drop": "npx sequelize-cli db:migrate:undo:all",
+		"seed:up": "npx sequelize-cli db:seed:all",
+    "seed:drop": "npx sequelize-cli seed:migrate:undo:all",
+    "pretest": "npm run migrate:down && npm run migrate:up && npm run seed:up",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/erickyvand/sneaker.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/erickyvand/sneaker/issues"
+	},
+	"homepage": "https://github.com/erickyvand/sneaker#readme",
+	"dependencies": {
+		"@babel/cli": "^7.11.6",
+		"@babel/core": "^7.11.6",
+		"@babel/node": "^7.10.5",
+		"@babel/preset-env": "^7.11.5",
+		"@babel/register": "^7.11.5",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"pg": "^8.3.3",
+		"pg-hstore": "^2.3.3",
+		"regenerator-runtime": "^0.13.7",
+		"sequelize": "^6.3.5"
+	},
+	"devDependencies": {
+		"sequelize-cli": "^6.2.0"
+	}
 }
