--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"migrate:up": "npx sequelize-cli db:migrate",
 		"migrate:drop": "npx sequelize-cli db:migrate:undo:all",
 		"seed:up": "npx sequelize-cli db:seed:all",
-    "seed:drop": "npx sequelize-cli seed:migrate:undo:all",
-    "pretest": "npm run migrate:down && npm run migrate:up && npm run seed:up",
+		"seed:drop": "npx sequelize-cli seed:migrate:undo:all",
+		"pretest": "npm run migrate:drop && npm run migrate:up && npm run seed:up",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -31,6 +31,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"joi": "^17.2.1",
 		"pg": "^8.3.3",
 		"pg-hstore": "^2.3.3",
 		"regenerator-runtime": "^0.13.7",
