--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # if you database does not required a password leave the database_password empty
 DATABASE_URL=postgres://database_username:database_password@host:5432/database_name
+
+REPO_TOKEN=COVERALLS_REPO_TOKEN
