--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"seed:up": "npx sequelize-cli db:seed:all",
 		"seed:drop": "npx sequelize-cli seed:migrate:undo:all",
 		"pretest": "npm run migrate:drop && npm run migrate:up && npm run seed:up",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"coverage": "nyc report --reporter=text-lcov | coveralls",
+		"test": "export NODE_ENV=test && nyc --reporter=html --reporter=text mocha --require @babel/register src/tests/**/*.test.js --timeout 100000 --exit"
 	},
 	"repository": {
 		"type": "git",
@@ -38,6 +39,12 @@
 		"sequelize": "^6.3.5"
 	},
 	"devDependencies": {
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"coveralls": "^3.1.0",
+		"mocha": "^8.1.3",
+		"mocha-lcov-reporter": "^1.3.0",
+		"nyc": "^15.1.0",
 		"sequelize-cli": "^6.2.0"
 	}
 }
